--- a/v10-text-featured.handlebars
+++ b/v10-text-featured.handlebars
@@ -20,14 +20,8 @@
       
       <div class="cell medium-5">
         <div class="news-event-lockup--text text-margin-reset oho-animate fade-in-right">
-          <h3 class="funderline">
-            <a href="{{publish element="Title" attribute="link"}}">
-              {{publish element="Title"}}
-            </a>
-          </h3>
-          
-          {{#ifSet element="News Types"}}
-          <div class="eyebrow">
+          <h3 class="funderline">{{{fulltext linkText=(publish element="Title")}}}</h3>
+            <div class="eyebrow">
             {{#each (selected element="News Types")}}
               {{#if @first}}
                 <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{encodeUrlQuery value}}">
