--- a/v10-text-featured.handlebars
+++ b/v10-text-featured.handlebars
@@ -16,20 +16,17 @@
           </figure>
         {{/ifSet}}
       </div>
-      
-      
       <div class="cell medium-5">
         <div class="news-event-lockup--text text-margin-reset oho-animate fade-in-right">
           <h3 class="funderline">{{{fulltext linkText=(publish element="Title")}}}</h3>
-          
           <div class="eyebrow">
-            {{#each (selected element="News Types")}}
-              {{#if @first}}
-                <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{encodeUrlQuery value}}">
-                  {{value}}
-                </a>
-              {{/if}}
-            {{/each}}
+            {{#ifSet element="News Types" ~}}
+                {{#each (selected element="News Types") ~}}
+                  {{#if @first}}
+                    <a href="{{nav id="991" name="Link to News & Stories"}}?newsTypes={{encodeUrlQuery value}}">{{value}}</a>
+                  {{/if}}
+                {{~/each}}
+            {{~/ifSet}}
           </div>
 
           
