--- a/v10-text-featured.handlebars
+++ b/v10-text-featured.handlebars
@@ -1,4 +1,4 @@
-{{!-- News Event Lockup --}}
+{{!-- Featured News Hero Story --}}
 <article class="news-event-lockup">
   <div class="grid-container oho-animate-sequence">
     <div class="grid-x grid-margin-x">
