--- a/v10-test-html-centralized-id8064.handlebars
+++ b/v10-test-html-centralized-id8064.handlebars
@@ -1,4 +1,4 @@
-<!-- News Carousel Central News ID: 8064 -->
+{{!-- News Carousel Central News ID: 8064 --}}
 <section class="news-section legendary-styles global-padding--10x bg--dark bg--blue">
   {{#if htmlAnchor}}
     <div id="{{htmlAnchor}}"></div>
