--- a/v10-test-html-centralized-id8064.handlebars
+++ b/v10-test-html-centralized-id8064.handlebars
@@ -7,8 +7,8 @@
         <div class="cell large-9">
             <div class="section-heading--basic text-margin-reset">
 
-            {{#if heading}}
-                <h2 class="oho-animate fade-in">{{heading}}</h2>
+            {{#ifSet element="Heading"}}
+                <h2 class="oho-animate fade-in">{{publish element="Heading"}}</h2>
             {{/if}}
 
             {{#if description}}
