grid complete hb

--- a/v10-test-html-centralized-id8064.handlebars
+++ b/v10-test-html-centralized-id8064.handlebars
@@ -4,29 +4,31 @@
   
     <div class="grid-container oho-animate-sequence">
         <div class="grid-x grid-margin-x">
-        <div class="cell large-9">
-            <div class="section-heading--basic text-margin-reset">
+            <div class="cell large-9">
+                <div class="section-heading--basic text-margin-reset">
 
-            {{#ifSet element="Heading"}}
-                <h2 class="oho-animate fade-in">{{publish element="Heading"}}</h2>
-            {{/if}}
+                    {{#ifSet element="Heading"}}
+                        <h2 class="oho-animate fade-in">{{publish element="Heading"}}</h2>
+                    {{/if}}
 
-            {{#ifSet element="Description"}}
-                <div class="global-spacing--2x oho-animate fade-in">
-                    <p>{{{publish element="Description"}}}</p>
+                    {{#ifSet element="Description"}}
+                        <div class="global-spacing--2x oho-animate fade-in">
+                            <p>{{{publish element="Description"}}}</p>
+                        </div>
+                    {{/ifSet}}
+
+                    {{#ifSet element="Primary Topic" ~}}
+                        <div class="section-heading__link global-spacing--2x oho-animate fade-in">
+                            {{#each (selected element="Primary Topic") ~}}
+                                {{#if @first}}
+                                    <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">{{value}}</a>
+                                {{/if}}
+                            {{~/each}}
+                        </div>
+                    {{/ifSet}}
+
                 </div>
-            {{/ifSet}}
-
-            {{#ifSet element="Primary Topic"}}
-                <div class="section-heading__link global-spacing--2x oho-animate fade-in">
-                <a href="{{newsStoriesLink}}?newsTopics={{urlEncode (lowercase primaryTopic.value)}}">
-                    More Similar News &amp; Stories
-                </a>
-                </div>
-            {{/ifSet}}
-
             </div>
-        </div>
         </div>
     </div>
     
