--- a/v10-test-html-centralized-id8064.handlebars
+++ b/v10-test-html-centralized-id8064.handlebars
@@ -9,7 +9,7 @@
 
                     {{#ifSet element="Heading"}}
                         <h2 class="oho-animate fade-in">{{publish element="Heading"}}</h2>
-                    {{/if}}
+                    {{/ifSet}}
 
                     {{#ifSet element="Description"}}
                         <div class="global-spacing--2x oho-animate fade-in">
