--- a/v10-text-html-carousel-centralized-id8064.handlebars
+++ b/v10-text-html-carousel-centralized-id8064.handlebars
@@ -1,37 +1,50 @@
+{{!-- News Carousel Centralized ID: 1117 --}}
 <section class="news-section global-padding--10x bg--dark bg--blue">
-    <t4 type="meta" meta="html_anchor" />
+    {{anchor}}
+    
     <div class="grid-container oho-animate-sequence">
         <div class="grid-x grid-margin-x">
             <div class="cell large-9">
                 <div class="section-heading--basic text-margin-reset">
 
-                    <h2 class="oho-animate fade-in"><t4 type="content" name="Heading" output="normal" modifiers="striptags,htmlentities" /></h2>
+                    {{#ifSet element="Heading"}}
+                        <h2 class="oho-animate fade-in">{{publish element="Heading"}}</h2>
+                    {{/ifSet}}
 
-                    <t4 type="content" name="Description" output="selective-output" process-format="true" format="<div class=&quot;global-spacing--2x oho-animate fade-in&quot;>
-                        <p><t4 type=&quot;content&quot; name=&quot;Description&quot; output=&quot;normal&quot; modifiers=&quot;striptags,htmlentities,nl2br&quot; /></p>
-                    </div>" />
+                    {{#ifSet element="Description"}}
+                        <div class="global-spacing--2x oho-animate fade-in">
+                            <p>{{{publish element="Description"}}}</p>
+                        </div>
+                    {{/ifSet}}
 
-                    <t4 type="content" name="Primary Topic" output="selective-output" modifiers="nav_sections" process-format="true" format="<div class=&quot;section-heading__link global-spacing--2x oho-animate fade-in&quot;>
-                        <a href=&quot;<t4 type=&quot;navigation&quot; name=&quot;Link to News & Stories&quot; id=&quot;991&quot; />?newsTopics=<?php echo urlencode(strtolower(&quot;<t4 type=&quot;content&quot; name=&quot;Primary Topic&quot; output=&quot;normal&quot; display_field=&quot;value&quot; modifiers=&quot;striptags&quot; />&quot;)); ?>&quot;>More Similar News &amp; Stories</a>
-                    </div>" />
+                    {{#ifSet element="Primary Topic" ~}}
+                        <div class="section-heading__link global-spacing--2x oho-animate fade-in">
+                            {{#each (selected element="Primary Topic") ~}}
+                                {{#if @first}}
+                                    <a href="{{nav id="991" name="Link to News & Stories"}}?newsTopics={{encodeUrlQuery value}}">More Similar News &amp; Stories</a>
+                                {{/if}}
+                            {{~/each}}
+                        </div>
+                    {{/ifSet}}
 
                 </div>
             </div>
         </div>
     </div>
+    
     <div class="news-section--swiper global-spacing--6x">
         <div class="grid-container oho-animate-sequence">
             <div class="swiper-container">
                 <ul class="swiper-wrapper">
-                    <t4 type="navigation" name="News Carousel Centralized" id="1117" />
+                    {{nav id="1117" name="News Carousel Centralized"}}
                 </ul>
                 <div class="slider-navigation">
 
-                <button class="slider-navigation__prev"><i class="far fa-chevron-left" aria-hidden="true"></i><span
-                    class="show-for-sr">Go to the previous slide.</span></button>
+                    <button class="slider-navigation__prev"><i class="far fa-chevron-left" aria-hidden="true"></i><span
+                        class="show-for-sr">Go to the previous slide.</span></button>
 
-                <button class="slider-navigation__next"><i class="far fa-chevron-right" aria-hidden="true"></i><span
-                    class="show-for-sr">Go to the next slide.</span></button>
+                    <button class="slider-navigation__next"><i class="far fa-chevron-right" aria-hidden="true"></i><span
+                        class="show-for-sr">Go to the next slide.</span></button>
 
                 </div>
             </div>
