--- a/v10-text-carousel-centralized.handlebars
+++ b/v10-text-carousel-centralized.handlebars
@@ -8,7 +8,9 @@
     <div class="news-story__text text-margin-reset">
       <h3 class="h5 funderline">{{{fulltext linkText=(publish element="Title")}}}</h3>
       {{#ifSet element="News Types" ~}}
-        <div class="eyebrow">{{publish element="News Types" display_field="value"}}</div>
+        {{#if @first}}
+          <div class="eyebrow">{{publish element="News Types" display_field="value"}}</div>
+        {{/if}}
       {{/ifSet}}
       <div class="global-spacing--2x">
         {{publish element="Article Subhead"}}
