eyebrow news types

--- a/v10-text-carousel-centralized.handlebars
+++ b/v10-text-carousel-centralized.handlebars
@@ -10,7 +10,7 @@
       {{#ifSet element="News Types" ~}}
         {{#if @first}}
           {{#if selected}}
-            <div class="eyebrow">{{publish element="News Types" display_field="value"}}</div>
+            <div class="eyebrow">{{value}}</div>
           {{/if}}
         {{/if}}
       {{/ifSet}}
