--- a/v10-text-carousel-centralized.handlebars
+++ b/v10-text-carousel-centralized.handlebars
@@ -1,3 +1,4 @@
+{{! v10/text/carousel/centralized }}
 <li class="swiper-slide oho-animate fade-in-up centralized">
   <article class="news-story--item">
     {{#ifSet element="Media Library Image"}}
@@ -7,14 +8,14 @@
     {{/ifSet}}
     <div class="news-story__text text-margin-reset">
       <h3 class="h5 funderline">{{{fulltext linkText=(publish element="Title")}}}</h3>
-      {{#ifSet element="News Types" ~}}
+      {{#ifSet element="News Types"~}}
         {{#if @first}}
           {{#if selected}}
             <div class="eyebrow">{{value}}</div>
           {{/if}}
         {{/if}}
       {{/ifSet}}
-      {{#ifSet element="Article Subhead" ~}}
+      {{#ifSet element="Article Subhead"~}}
         <div class="global-spacing--2x">
           {{publish element="Article Subhead"}}
         </div>
@@ -22,4 +23,3 @@
     </div>
   </article>
 </li>
-{{!-- v10/text/carousel/centralized --}}
