--- a/v10-text-carousel-centralized.handlebars
+++ b/v10-text-carousel-centralized.handlebars
@@ -8,14 +8,12 @@
     {{/ifSet}}
     <div class="news-story__text text-margin-reset">
       <h3 class="h5 funderline">{{{fulltext linkText=(publish element="Title")}}}</h3>
-      {{#ifSet element="News Types"~}}
+      {{#ifSet element="News Types" ~}}
         {{#if @first}}
-          {{#if selected}}
-            <div class="eyebrow">{{value}}</div>
-          {{/if}}
+          {{#if selected}}<div class="eyebrow">{{/if}}{{value}}{{#if selected}}</div>{{/if}}
         {{/if}}
       {{/ifSet}}
-      {{#ifSet element="Article Subhead"~}}
+      {{#ifSet element="Article Subhead" ~}}
         <div class="global-spacing--2x">
           {{publish element="Article Subhead"}}
         </div>
