--- a/v10-text-carousel-centralized.handlebars
+++ b/v10-text-carousel-centralized.handlebars
@@ -1,5 +1,5 @@
 {{! v10/text/carousel/centralized }}
-<li class="swiper-slide oho-animate fade-in-up centralized">
+<li class="swiper-slide centralized oho-animate fade-in-up">
   <article class="news-story--item">
     {{#ifSet element="Media Library Image"}}
       <figure class="aspect-ratio-frame" style="--aspect-ratio: 24/38">
