--- a/v10-test-html-centralized-id8064.handlebars
+++ b/v10-test-html-centralized-id8064.handlebars
@@ -1,5 +1,5 @@
 {{!-- News Carousel Central News ID: 8064 --}}
-<section class="news-section legendary-styles global-padding--10x bg--dark bg--blue">
+<section class="news-section legendary-styles global-padding--10x">
     {{anchor}}
   
     <div class="grid-container oho-animate-sequence">
