--- a/v10-text-html-centralized-id8064.handlebars
+++ b/v10-text-html-centralized-id8064.handlebars
@@ -1,5 +1,5 @@
 {{!-- News Carousel Central News ID: 8064 --}}
-<section class="news-section legendary-styles global-padding--5x">
+<section class="news-section legendary-styles global-padding--5x" id="{{contentId}}">
     {{anchor}}
   
     <div class="grid-container oho-animate-sequence">
